Added logon route
